Skip to content

automoc does not generate moc_predefs.h

When building a Qt application on i686, moc causes: moc_iconapplet_FERWDM656PUOUJ.cpp:128:21: error: 'class IconApplet' has no member named 'open64'; did you mean 'open'? This is due to moc not defining _GNUC_ >= 2, so it emits code that does not match the header.

This issue is easily reproducable in a i686 build of kget or plasma-workspace.

This bug is fixed in Qt 5.8 as it dumps the list of compiler internal macros into a moc_predefs.h file but CMake does not do that: https://bugreports.qt.io/browse/QTBUG-57796

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information